# vcore

./: .bumpversion.cfg  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  mkdocs.yml  mypy.ini  pyproject.toml
0.1/: 404.html  index.html
0.1/advanced-guide/: index.html
0.1/contributing/: index.html
0.1/user-guide/: index.html
examples/: durov.py  events.py
src/: api.rs  collector.rs  event.rs  lib.rs  rate_limit.rs  response.rs
tests/: test_sum.py
vcore/pluginable/connector/: base.py  impls.py
vcore/pluginable/json_parser/: base.py  impls.py
