[package]
name = "vcore"
version = "0.1.0"
edition = "2021"

[lib]
name = "vcore_ext"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.15.1", features = ["extension-module", "serde"] }
pyo3-asyncio = { version = "0.15", features = ["tokio-runtime"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.17", features = ["full"] }
serde_json = "1.0"
