[package]
name = "vcore"
version = "0.1.0"
edition = "2021"

[lib]
name = "vcore_ext"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.13", features = ["extension-module"] }
#pyo3-asyncio = { version = "0.13", features = ["tokio-runtime"] }
pyo3-asyncio = { git = "https://github.com/alekseyl1992/pyo3-asyncio", branch = "invalid_state_fix", features = ["tokio-runtime"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.17", features = ["full"] }
serde_json = "1.0"
